--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,6 +1,7 @@
-$text__family--RB:  'RB', sans-serif;
+$text__family--RB:  'Roboto', sans-serif;
 $base__font-size: 16px !default;
 $base__line: 20 !default;
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 
 @font-face {
     font-family: 'RB';
@@ -24,7 +25,7 @@ html {
 
 }
 h1 {
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   font-size: 50px;
   font-weight: bold;
   font-style: normal;
@@ -33,12 +34,25 @@ h1 {
   letter-spacing: normal;
   text-align: left;
   color:black;
+  text-transform: uppercase;
   padding-top: 11%;
+  @include breakpoint(mobile) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 16px;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.09;
+    margin-bottom: 10px;
+  }
 
 }
 h2 {
   font-size: 32px;
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   text-transform: uppercase;
   font-weight: bold;
   font-style: normal;
@@ -58,6 +72,12 @@ h5 {
   text-align: left;
   color: #707070;
   margin-bottom: 6.6%;
+  @include breakpoint(mobile) {
+    line-height: 21px;
+    margin-bottom: 32px;
+    color:#000000;
+    line-height: 24px;
+  }
 }
 p {
   font-size: 18px;
