--- a/assets/scss/blocks/_b-category.scss
+++ b/assets/scss/blocks/_b-category.scss
@@ -53,7 +53,7 @@
   border:2px solid black;
   display: inline-block;
   text-transform: uppercase;
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   padding: 3px 3px;
   margin-right: 9px;
 
