--- a/assets/scss/blocks/_b-product.scss
+++ b/assets/scss/blocks/_b-product.scss
@@ -3,7 +3,7 @@
  mark {
     font-weight: bold;
     background: transparent;
-    font-family: 'RB-Bold';
+    // font-family: 'RB-Bold';
     font-style: normal;
     font-stretch: normal;
     line-height: 1.21;
@@ -20,7 +20,7 @@
   font-style: normal;
   font-stretch: normal;
   line-height: 1.29;
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   letter-spacing: normal;
   text-align: left;
   color: #000000;
@@ -52,6 +52,7 @@
   padding-left: 30px;
   @include breakpoint(mobile) {
     width: 100%;
+    padding-left:0;
     padding-top:5%;
   }
 }
@@ -59,7 +60,7 @@
   font-size: 12px;
   font-weight: bold;
   font-style: normal;
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   font-stretch: normal;
   line-height: 2.25;
   letter-spacing: 0.6px;
@@ -86,10 +87,10 @@
   letter-spacing: 0.8px;
   text-align: left;
 
-  font-family: 'RB-Bold';
+  // font-family: 'RB-Bold';
   color: #000000;
   span {
-    font-family: 'RB';
+    // font-family: 'RB';
     text-decoration: underline;
 
   }
