--- a/assets/scss/blocks/_footer.scss
+++ b/assets/scss/blocks/_footer.scss
@@ -2,6 +2,9 @@ footer {
   background: black;
   display: block;
   padding: 2.3% 0 23%;
+  @include breakpoint(mobile) {
+    margin-top: 50px;
+  }
 }
 .footer__logo {
   max-width: 144px;
