--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -2,6 +2,7 @@ header {
   background: black;
   line-height: 72px;
   height: 72px;
+  margin-bottom: 5%;
   .search-ico {
     float: right;
     width: 12px;
