vue lazyload component, starts after second component + font in head preconnect

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,30 +1,33 @@
 $text__family--RB:  'Roboto', sans-serif;
 $base__font-size: 16px !default;
 $base__line: 20 !default;
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('/src/font/Roboto-Medium.woff2') format('woff2'),
-        url('/src/font/Roboto-Medium.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('/src/font/Roboto-Bold.woff2') format('woff2'),
-        url('/src/font/Roboto-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('/src/font/Roboto-Light.woff2') format('woff2'),
-        url('/src/font/Roboto-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
+// 
+// @font-face {
+//     font-family: 'Roboto';
+//     src: url('/src/font/Roboto-Medium.woff2') format('woff2'),
+//         url('/src/font/Roboto-Medium.woff') format('woff');
+//     font-weight: 500;
+//     font-display: auto;
+//     font-style: normal;
+// }
+//
+// @font-face {
+//     font-family: 'Roboto';
+//     src: url('/src/font/Roboto-Bold.woff2') format('woff2'),
+//         url('/src/font/Roboto-Bold.woff') format('woff');
+//     font-weight: bold;
+//     font-display: auto;
+//     font-style: normal;
+// }
+//
+// @font-face {
+//     font-family: 'Roboto';
+//     src: url('/src/font/Roboto-Light.woff2') format('woff2'),
+//         url('/src/font/Roboto-Light.woff') format('woff');
+//     font-weight: 300;
+//     font-display: auto;
+//     font-style: normal;
+// }
 html {
   font-family: $text__family--RB;
 	font-size: $base__font-size;
