new lazy load, thumbor url, bug fixes

--- a/assets/scss/blocks/_b-product.scss
+++ b/assets/scss/blocks/_b-product.scss
@@ -1,6 +1,6 @@
 .b-product {
   margin-bottom: 32px;
- mark {
+ .mark {
     font-weight: bold;
     background: transparent;
     // font-family: 'RB-Bold';
